<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/empty_small_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/connection_status_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_red"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/alen_box"
                android:src="@drawable/alen_box" />

            <TextView
                android:id="@+id/text_connection_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_not_connected" />

            <ImageView
                android:id="@+id/image_connection_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/connection_status"
                android:src="@drawable/ic_error_red" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="488dp"
            android:layout_weight="1"
            android:fitsSystemWindows="true"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_connection_errors" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_information_headline"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/text_information" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_start_hack_logo"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/start_hack" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_iot_lab_logo"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/iot_lab_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|email"
                    android:paddingTop="16dp"
                    android:text="@string/text_website_information" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
</FrameLayout>