<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".IntervalSyncFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/empty_small_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/text_interval" />

            <EditText
                android:id="@+id/text_sensor_interval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/text_hint_interval"
                android:digits="0123456789"
                android:hint="@string/text_hint_interval"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_sync"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/text_sync" />

            <ImageButton
                android:id="@+id/button_sync_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/button_play"
                android:src="@drawable/ic_play"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/button_sync_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorAccentUnfocused"
                android:contentDescription="@string/button_stop"
                android:src="@drawable/ic_stop"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>